<resources>
    <string name="app_name">How much my portion ?</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7273514499724377/7445107658</string>
    <string name="requirement">Input Title, Total Amount  and  # of attendee</string>
    <string name="NameofEvent">Input the event name</string>
    <string name="TotalAmount">Input the total spent amount</string>
    <string name="NumberOfAttendee">Input # of attendee</string>
    <string name="InputListofAttendee">CheckBox for name list</string>
    <string name="CheckofUnit">Check the digit of truncation</string>
    <string name="_1">1 digit</string>
    <string name="Unit10">2 digit</string>
    <string name="Unit100">3 digits</string>
    <string name="Confrimation">Confirmation</string>
    <string name="nameEvent">Title :</string>
    <string name="totalAmount">Total Amount ;</string>
    <string name="attendee">Attendant ;</string>
    <string name="title">Title</string>
    <string name="totalamount">Total Spent Amount</string>
    <string name="numattendee">Number of Attendee</string>
    <string name="portion">Portion Per Attendee</string>
    <string name="amountperattendee">Portion Per Attendee</string>
    <string name="won">$</string>
    <string name="cut">Cutting digit</string>
    <string name="unit1">1 digits</string>
    <string name="unit10">2 digits</string>
    <string name="unit100">3 digits</string>
    <string name="detailcal">Detail Calculation</string>
    <string name="accountinfo">Account Information</string>
    <string name="bankname">Bank Name</string>
    <string name="accountnum">Account number</string>
    <string name="owner">Owner name</string>
    <string name="statusportion">Results of Calculation</string>
    <string name="confirmmessage">Confrim Message</string>
    <string name="sendmessage">Send Message</string>
    <string name="resultcaland">[Input Account Information]</string>
    <string name="bank">Bank Name XXXXX</string>
    <string name="holder">Owner name</string>
    <string name="numaccount">Account Number XXX-XX-XXXX</string>
    <string name="messagecon">Confirm Message</string>
    <string name="sendmessag">Send Message</string>
    <string name="resultcal">Results of Calculation</string>
    <string name="test">\"Input  the fixed amount again.  Cannot calculate because all fixed amount are selected \n\"</string>
    <string name="amout">Amount</string>
    <string name="onlyonepayer">Should be only one payer.</string>
    <string name="payer">Payer</string>
    <string name="fix">Fix</string>
    <string name="amountovertotal">The amount is over the total spent one.</string>
    <string name="amountsmall">Amount is too small.</string>
    <string name="selectagainallchex">Select checkbox again. All fixed amount  are over the total amount.</string>
    <string name="selectagainfixamountover">Select fixed amount again. The sum of fixed  amount is over the total spent amount.</string>
    <string name="portionattend">Portion of attendee ;</string>
    <string name="portionofattendee">Portion of attendee ;</string>
    <string name="title1">Title    :</string>
    <string name="totalamount2">Total Amount  :</string>
    <string name="numberattendee">Number of attendee  :</string>
    <string name="accountnumber2">Account number :</string>
    <string name="owner2">Owner ;</string>
    <string name="payer2">Payer  :</string>
    <string name="inputfixedamountagain">Input the fixed amount again. The sum of fixed  amount is over the total spent amount</string>
</resources>
