<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:focusable="true"
    android:focusableInTouchMode="true"

    android:orientation="vertical"
    tools:context="com.chungmyung.ndivident.DetailCalculationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:text="@string/nameEvent"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:text="@string/totalAmount"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:text="@string/attendee"
                        android:textSize="24sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <EditText
                        android:id="@+id/calcul_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/calcul_maxmoney_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/totalamount"
                        android:inputType="number"
                        android:paddingTop="8dp"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/calcul_peoplenum_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/numattendee"
                        android:inputType="number"
                        android:paddingTop="8dp"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/portion"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone">


                    <TextView
                        android:id="@+id/calcul_money_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/amountperattendee"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/won"
                        android:textSize="24sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cut"
                    android:textSize="18sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">



                <RadioButton
                    android:id="@+id/radio_button_c10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit1" />

                <RadioButton
                    android:id="@+id/radio_button_c100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit10" />

                <RadioButton
                    android:id="@+id/radio_button_c1000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit100" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/add_all_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp" />


        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/button_calc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/detailcal"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/accountinfo"
            android:textSize="18sp" />

    </LinearLayout>


    <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">

        </com.google.android.gms.ads.AdView>




</LinearLayout>

