<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.chungmyung.ndivident.Result_message_Activity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resultcaland"
                android:textSize="16dp"
                tools:ignore="HardcodedText" />


            <EditText
                android:id="@+id/bankname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/holdername_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/holder"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/accountnum_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789-"
                android:hint="@string/numaccount"
                android:imeOptions="actionNext"
                android:inputType="numberSigned"
                android:lines="1"
                android:textSize="16dp"
                tools:ignore="HardcodedText" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickConfirmButton"
                android:text="@string/messagecon" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1    "
                android:onClick="onClickSendButton"
                android:text="@string/sendmessag" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <TextView
                android:id="@+id/message_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resultcal" />


        </ScrollView>


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</LinearLayout>





