<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.chungmyung.ndivident.FirstCalculationActivity">


        <EditText
            android:id="@+id/bankname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bankname"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/banknum_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789-"
            android:hint="@string/accountnum"
            android:inputType="numberSigned"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/holder_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/owner"
            android:inputType="text"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/simple_amount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/statusportion"
                android:textSize="16sp" />


        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickConfirmButton"
                android:text="@string/confirmmessage" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickSendButton"
                android:text="@string/sendmessage" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>




