<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chungmyung.ndivident.Eventcost_Payment_Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/requirement"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/eventName_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/NameofEvent"
                android:inputType="text"
                android:nextFocusDown="@+id/totalAmount_edit" />

            <EditText
                android:id="@id/totalAmount_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/TotalAmount"
                android:inputType="number"
                android:nextFocusDown="@+id/numAttendee_edit"
                tools:ignore="HardcodedText" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@id/numAttendee_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/NumberOfAttendee"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal" />

                <CheckBox
                    android:id="@+id/attendeelist_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="32dp"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/InputListofAttendee" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/CheckofUnit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/unit1_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="8dp"
                        android:text="@string/_1" />

                    <RadioButton
                        android:id="@+id/unit2_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="8dp"
                        android:text="@string/Unit10" />

                    <RadioButton
                        android:id="@+id/unit3_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="8dp"
                        android:text="@string/Unit100" />

                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/addNamelist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

            </LinearLayout>


            <Button
                android:id="@+id/action_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:onClick="onClickButton"
                android:text="@string/Confrimation"
                android:textSize="16sp" />


        </LinearLayout>

</ScrollView>

    </LinearLayout>


<com.google.android.gms.ads.AdView
android:id="@+id/adView"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_gravity="center"
ads:adSize="BANNER"
ads:adUnitId="@string/banner_ad_unit_id" />


    </LinearLayout>



